# rune

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
assets/: rune-hook.js
packaging/: build-deb.sh  install.sh  io.github.ahmed7991.rune.desktop
src/: claude.rs  config.rs  cost.rs  git.rs  hooks.rs  main.rs  palette.rs  queue.rs  sessions.rs  status.rs  terminal.rs  ui.rs
